--- a/church1/dashboard.html
+++ b/church1/dashboard.html
@@ -1,71 +1,151 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ash.North SDA Church Treasury</title>
-    <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
-    <link rel="stylesheet" href="./assest/styles/styles.css" />
-    <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"/>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script src="./assest/scripts/auth.js"></script> 
-</head>
-<body>
-    <nav>
-        <input type="checkbox" id="check" />
-        <label for="check" class="checkbtn">
-          <i class="fas fa-bars"></i>
-        </label>
-        <a href="landing-page.html" class="logo3">Ash.North Treasury Dept.
-        <img class="sda_logo" src="./assest/images/sda_logo.png" alt="logo"></a>
-        <ul>
-            <li><a id="dashboard"  class="active" href="dashboard.html"> <i class="fa-solid fa-chart-line"></i> Dashboard</a></li>
-          <li class="dropdown">
-            <div id="admin-section" style="display: none;">
-                <a> <i class="fa-solid fa-bars"></i> Menu</a>
-                <div class="dropdown-content">
-                  <a href="income-book.html">Income-Book</a>
-                  <a href="full-view.html">Full View</a>
-                  <a href="expenditure-book.html">Expenditure-Book</a>
-                  <a href="cutoff.html">Cut-Off Sheet</a>
-                  <a href="denominations.html">Denominations</a>
-                </div>
-              </div>
-          </li>
-          <li class="dropdown">
-            <a> <i class="fa-solid fa-folder-minus"></i> Saved Records</a>
-            <div class="dropdown-content">
-              <a class="active" href="income-records.html">Income-Records</a>
-              <a href="expenditure-records.html">Expenses-Records</a>
-              <a href="local-records.html">Local-Records</a>
-              <a href="conference-records.html">Conference-Records</a>
-              <a href="district-records.html">District-Records</a>
-            </div>
-          </li>
-          <li><a id="log-out"> <i class="fa-solid fa-right-from-bracket"></i> Log Out</a></li>
-        </ul>
-      </nav>
-      <br><br>
+document.addEventListener("DOMContentLoaded", () => {
+  const ExpenditureWebAppUrl = 'https://script.google.com/macros/s/AKfycby9-laPphroGrCkAsLCIUhM9ZHXhzfB5AB_bW5013Kxi33_epoj47Zd2qKzZM3pxOxryQ/exec';
+  const LocalIncomeWebAppUrl = 'https://script.google.com/macros/s/AKfycbxfRWuHaQ-lEvopSxkHOTXmeeWYAZ4TCx9NvUi3loXYmMjTfxq-D9VMIZY-KFOxDVNUGQ/exec';
+
+  const spinnerIncomeExpenditure = document.getElementById('spinner5');
+  const chartIncomeExpenditure = document.getElementById('morris-bar-chart');
+  if (spinnerIncomeExpenditure) spinnerIncomeExpenditure.style.display = 'block';
+
+    // Fetch Income, Expenditure Conference and District data concurrently
+Promise.all([
+  fetch(ExpenditureWebAppUrl).then(response => {
+    if (!response.ok) {
+      throw new Error('Network response was not ok for Expenditure');
+    }
+    return response.json();
+  }),
+  fetch(LocalIncomeWebAppUrl).then(response => {
+    if (!response.ok) {
+      throw new Error('Network response was not ok for Localincome');
+    }
+    return response.json();
+  })
+
+
+])
+
+
+.then(([ expenditureData,  localData]) => {
+ 
+    // Process Income and Expenditure for each month and save to session storage
+    const monthlyIncome = {};
+    const monthlyExpenditure = {};
+    const months = ['JAN', 'FEB', 'MAR', 'APR', 'MAY', 'JUN', 'JUL', 'AUG', 'SEP', 'OCT', 'NOV', 'DEC'];
     
+    // Process Expenditure for each month and save to session storage
+    for (const month of months) {
+      let income = null;
+      for (const record of localData) {
+        if (record[month] && !isNaN(record[month])) {
+        income = parseFloat(record[month]);
+        break;
+        }
+      }
+      monthlyIncome[month] = income !== null ? income : 0; // Default to 0 if no valid data found
+    }
+
+    // Process Expenditure for each month and save to session storage
+    for (const month of months) {
+      let expenditure = null;
+      for (const record of expenditureData) {
+        if (record[month] && !isNaN(record[month])) {
+          expenditure = parseFloat(record[month]);
+          break;
+        }
+      }
+      monthlyExpenditure[month] = expenditure !== null ? expenditure : 0; // Default to 0 if no valid data found
+    }
+
+    // Save monthly income to session storage
+    sessionStorage.setItem('monthlyIncome', JSON.stringify(monthlyIncome));
+
+    // Save monthly expenditure to session storage
+    sessionStorage.setItem('monthlyExpenditure', JSON.stringify(monthlyExpenditure));
 
 
+    (function($) {
+      "use strict";
+  
+       const monthlyExpenditure = sessionStorage.getItem("monthlyExpenditure");
+      const monthlyIncome = sessionStorage.getItem("monthlyIncome");
+      if (monthlyExpenditure && monthlyIncome) {
+      const expenditureData = JSON.parse(monthlyExpenditure);
+      const incomeData = JSON.parse(monthlyIncome);
+  
+      // Morris bar chart
+      Morris.Bar({
+          element: 'morris-bar-chart',
+          data: [{
+              y: 'Jan',
+              a: incomeData['JAN'],
+              b: expenditureData['JAN']
+          }, {
+              y: 'Feb',
+              a: incomeData['FEB'],
+              b: expenditureData['FEB']
+          }, {
+              y: 'Mar',
+              a: incomeData['MAR'],
+              b: expenditureData['MAR']
+          }, {
+              y: 'Apr',
+              a: incomeData['APR'],
+              b: expenditureData['APR']
+          }, {
+              y: 'May',
+              a: incomeData['MAY'],
+              b: expenditureData['MAY']
+          }, {
+              y: 'Jun',
+              a: incomeData['JUN'],
+              b: expenditureData['JUN']
+          }, {
+              y: 'Jul',
+              a: incomeData['JUL'],
+              b: expenditureData['JUL']
+          }, {
+              y: 'Aug',
+              a: incomeData['AUG'],
+              b: expenditureData['AUG']
+          }, {
+              y: 'Sep',
+              a: incomeData['SEP'],
+              b: expenditureData['SEP']
+          }, {
+              y: 'Oct',
+              a: incomeData['OCT'],
+              b: expenditureData['OCT']
+          }, {
+              y: 'Nov',
+              a: incomeData['NOV'],
+              b: expenditureData['NOV']
+          }, {
+              y: 'Dec',
+              a: incomeData['DEC'],
+              b: expenditureData['DEC']
+          }],
+          xkey: 'y',
+          ykeys: ['a', 'b'],
+          labels: ['Inc', 'Exp'],
+          // barColors: ['#343957', '#5873FE'],
+          barColors: ['#5873FE', '#FF0000'],
+          hideHover: 'auto',
+          gridLineColor: '#eef0f2',
+          resize: true
+      });
+
+      }
+  })(jQuery);
+
+})
+.catch(error => {
+  console.error('Error fetching data:', error);
+})
+.finally(() => {
+  // Hide spinner after data is fetched or if there's an error
+  if (spinnerIncomeExpenditure) spinnerIncomeExpenditure.style.display = 'none';
+  if (chartIncomeExpenditure) chartIncomeExpenditure.style.display = 'block';
+});
 
 
-    <br><br><br><br><br>
-
-    <footer class="footer">
-        <p>&copy; 2025 Phlashly Inc©. All rights reserved.</p>
-        <p>Contact us: <a href="mailto:franklinboachie@gmail.com">franklinboachie@gmail.com</a> | Phone: +233-540-896194</p>
-      </footer>
-
-    <script src="./assest/scripts/script.js"></script>
-
-    <script>
-        
-    </script>
-</body>
-</html>
+});
