Rearranged the file directories

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
         <meta name="description" content="">
         <meta name="author" content="">
         <title>Ashaiman North Treasury</title>
-        <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
+        <link rel="icon" type="image/icon" href="./outsideAssest/images/favicon.png">
         <!-- CSS FILES -->     
         <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
-        <link href="./indexPageAssets/css/bootstrap.min.css" rel="stylesheet">
-        <link href="./indexPageAssets/css/bootstrap-icons.css" rel="stylesheet">
-        <link href="./indexPageAssets/css/tooplate-clean-work.css" rel="stylesheet">
+        <link href="./outsideAssest/indexPageAssets/css/bootstrap.min.css" rel="stylesheet">
+        <link href="./outsideAssest/indexPageAssets/css/bootstrap-icons.css" rel="stylesheet">
+        <link href="./outsideAssest/indexPageAssets/css/tooplate-clean-work.css" rel="stylesheet">
 
     </head>
     <body>
@@ -74,7 +74,7 @@
                         </div>
 
                         <div class="col-lg-6 col-12 custom-block-wrap">
-                            <img src="./indexPageAssets/images/male-wearing-apron-female-white-t-shirt-smiling-broadly-being-glad-clean.png" class="img-fluid">
+                            <img src="./outsideAssest/indexPageAssets/images/male-wearing-apron-female-white-t-shirt-smiling-broadly-being-glad-clean.png" class="img-fluid">
 
                             <div class="custom-block d-flex flex-column">
                                 <h6 class="text-white mb-3">For more info <br> Contact us:</h6>
@@ -99,15 +99,15 @@
 
         <!-- JAVASCRIPT FILES -->
         
-        <script src="./indexPageAssets/js/jquery.min.js"></script>
+        <script src="./outsideAssest/indexPageAssets/js/jquery.min.js"></script>
         <!-- <script src="js/bootstrap.min.js"></script> -->
-        <script src="./indexPageAssets/js/jquery.backstretch.min.js"></script>
-        <script src="./indexPageAssets/js/counter.js"></script>
-        <script src="./indexPageAssets/js/countdown.js"></script>
+        <script src="./outsideAssest/indexPageAssets/js/jquery.backstretch.min.js"></script>
+        <script src="./outsideAssest/indexPageAssets/js/counter.js"></script>
+        <script src="./outsideAssest/indexPageAssets/js/countdown.js"></script>
         <!-- <script src="js/init.js"></script> -->
         <!-- <script src="js/modernizr.js"></script> -->
-        <script src="./indexPageAssets/js/animated-headline.js"></script>
-        <script src="./indexPageAssets/js/custom.js"></script>
+        <script src="./outsideAssest/indexPageAssets/js/animated-headline.js"></script>
+        <script src="./outsideAssest/indexPageAssets/js/custom.js"></script>
 
     </body>
 </html>
