--- a/login.html
+++ b/login.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ash.North SDA Church Treasury</title>
-    <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
-    <link rel="stylesheet" href="./assest/styles/styles.css">
+    <link rel="icon" type="image/icon" href="./outsideAssest/images/favicon.png">
+    <link rel="stylesheet" href="./outsideAssest/styles/styles.css">
     <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <scrip src="./assest/scripts/auth.js"></scrip>
+    <!-- <scrip src="./assest/scripts/auth.js"></scrip> -->
    
 </head>
 <body>
     <div class="form-container">
         <form class="form" id="loginForm">
-          <img class="logo" src="./assest/images/logo.png" alt="logo">
+          <img class="logo" src="./outsideAssest/images/logo.png" alt="logo">
             <h2>Login</h2>
             <div class="form-group">
                 <label for="Email">Email</label>
