--- a/signup.html
+++ b/signup.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ash.North SDA Church Treasury</title>
-    <link rel="icon" type="image/icon" href="./assest/images/favicon.png">
-    <link rel="stylesheet" href="./assest/styles/styles.css">
+    <link rel="icon" type="image/icon" href="./outsideAssest/images/favicon.png">
+    <link rel="stylesheet" href="./outsideAssest/styles/styles.css">
     <script src="https://kit.fontawesome.com/8ebf6fd839.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
@@ -13,7 +13,7 @@
     <br><br><br><br>
     <div class="form-container">
         <form class="form" id="signupForm">
-            <img class="logo" src="./assest/images/logo.png" alt="logo">
+            <img class="logo" src="./outsideAssest/images/logo.png" alt="logo">
             <h2>Sign Up</h2>
             <div class="form-group">
                 <label for="signupName">First Name</label>
