--- a/church1/local-records.html
+++ b/church1/local-records.html
@@ -30,7 +30,15 @@
                 <div class="dropdown-content">
                   <a href="income-book.html">Income-Book</a>
                   <a href="full-view.html">Full View</a>
-                  <a href="expenditure-book.html">Expenditure-Book</a>
+
+                  <a id="expensesRecords" href="#"> <i class="fa-solid fa-square-caret-down"></i> Expenditure-Book</a>
+                  <div id="expensesSubmenu" class="dropdown-content" style="display: none;">
+                    <a href="local-expenditure-book.html">Local Expenditure</a>
+                    <a href="district-expenditure-book.html">District Expenditure</a>
+                    <a href="conference-expenditure-book.html">Conference Expenditure</a>
+                  </div>
+
+                  <!-- <a href="expenditure-book.html">Expenditure-Book</a> -->
                   <a href="cutoff.html">Cut-Off Sheet</a>
                   <a href="denominations.html">Denominations</a>
                 </div>
