--- a/church1/conference-expenditure-book.html
+++ b/church1/conference-expenditure-book.html
@@ -26,7 +26,14 @@
             <div class="dropdown-content">
               <a href="income-book.html">Income-Book</a>
               <a href="full-view.html">Full View</a>
-              <a class="active" href="expenditure-book.html">Expenditure-Book</a>
+
+              <a id="expensesRecords" href="#"> <i class="fa-solid fa-square-caret-down"></i> Expenditure-Book</a>
+                  <div id="expensesSubmenu" class="dropdown-content" style="display: none;">
+                    <a href="local-expenditure-book.html">Local Expenditure</a>
+                    <a href="district-expenditure-book.html">District Expenditure</a>
+                    <a href="conference-expenditure-book.html">Conference Expenditure</a>
+                  </div>
+              <!-- <a class="active" href="expenditure-book.html">Expenditure-Book</a> -->
               <a href="cutoff.html">Cut-Off Sheet</a>
               <a href="denominations.html">Denominations</a>
               
@@ -48,10 +55,10 @@
 
 
     <div class="container">
-      <h1 class="records-header" style="background-color:#90066b;">Expenditure Table</h1>
+      <h1 class="records-header" style="background-color:#c5105e;"> Conference Expenditure Table</h1>
       <div class="scrollable-container">
         <div class="table-container">
-          <form id="incomeTableForm">
+          <form id="confExpenTableForm">
           <table id="amountTable">
             <div class="date-filter-container">
               <label for="fromDate" class="date-label">Date:</label>
@@ -112,22 +119,16 @@
     <script src="./assest/scripts/script.js"></script>
 
     <datalist id="particularsList">
-      <option value="Utilities"></option>
-      <option value="Deaconery"></option>
-      <option value="Local Transport"></option>
-      <option value="Funeral"></option>
-      <option value="Charity"></option>
+      <option value="Sabbath Sch Order"></option>
+      <option value="Camp Goal"></option>
     </datalist>
 
 
 <script>
     // For the Save Button (Submit button for the form)
-    const scriptURL =  "https://script.google.com/macros/s/AKfycbwfn3QAsi_s8g8pXZs_1j0p4Me3FqFhmdzSW99r2y7SiWiuI77B2oCsubCIKX78bJ01Bw/exec"                      
-    // "https://script.google.com/macros/s/AKfycbyWOFw5vM7pxj_Hd1srPRrEYa9yULbL5hFT8tHnVMMYNDLzVKOLNXcvKtwzQyAblr7P/exec"
-    // "https://script.google.com/macros/s/AKfycbyYbRcQLAY7nbW6UXB-xkqbh08TAbcnA9KEf46g7fUUrVVJx_qVLP8-7Hk69eTeiJL6/exec"
-    // "https://script.google.com/macros/s/AKfycbzDQDwIpmEJ308Fft4eH2bTJ6ac68x63rlaMXf531nKRatd7YESvz6NlxmAh06WCuXvuA/exec"
-   
-    const form = document.forms["incomeTableForm"];
+    const scriptURL =  'https://script.google.com/macros/s/AKfycbyuWNfL4LByPRBo9pGUk_27DHAF-xiX8yR0ubIcbpa_yqQdTdICNvUo2iqlvTml1rXg/exec';                    
+
+    const form = document.forms["confExpenTableForm"];
     form.addEventListener("submit", (e) => {
       e.preventDefault();
 
@@ -275,8 +276,8 @@ if (duplicateParticulars.length > 0) {
 
     
 // Prevent form submission on Enter key press
-const IncomeTableForm = document.getElementById("incomeTableForm");
-IncomeTableForm.addEventListener("keydown", function(event) {
+const ConfExpenTableForm = document.getElementById("confExpenTableForm");
+ConfExpenTableForm.addEventListener("keydown", function(event) {
     if (event.key === "Enter") {
         event.preventDefault();
     }
