--- a/church1/cutoff.html
+++ b/church1/cutoff.html
@@ -30,7 +30,14 @@
                 <div class="dropdown-content">
                   <a href="income-book.html">Income-Book</a>
                   <a href="full-view.html">Full View</a>
-                  <a href="expenditure-book.html">Expenditure-Book</a>
+
+                  <a id="expensesRecords" href="#"> <i class="fa-solid fa-square-caret-down"></i> Expenditure-Book</a>
+                  <div id="expensesSubmenu" class="dropdown-content" style="display: none;">
+                    <a href="local-expenditure-book.html">Local Expenditure</a>
+                    <a href="district-expenditure-book.html">District Expenditure</a>
+                    <a href="conference-expenditure-book.html">Conference Expenditure</a>
+                  </div>
+                  <!-- <a href="expenditure-book.html">Expenditure-Book</a> -->
                   <a class="active"  href="cutoff.html">Cut-Off Sheet</a>
                   <a href="denominations.html">Denominations</a>
                 </div>
@@ -80,6 +87,8 @@
                         <th>C.B.F</th>
                         <th>Loose Offering</th>
                         <th>Thanks Giving</th>
+                        <th>Sabbath Sch Order</th>
+                        <th>Camp Goal</th>
                         <th>Total</th>
                     </tr>
                 </thead>
@@ -107,6 +116,8 @@
                         <th>C.B.F</th>
                         <th>Loose Offering</th>
                         <th>Thanks Giving</th>
+                        <th>Transportation</th>
+                        <th>Doryumu Sch Project</th>
                         <th>Total</th>
                     </tr>
                 </thead>
@@ -157,6 +168,8 @@
                             <td>${row['C.B.F']}</td>
                             <td>${row['LOOSE-OFFERING']}</td>
                             <td>${row['THANKSGIVING']}</td>
+                            <td>${row['SABBATH-SCH-ORDER']}</td>
+                            <td>${row['CAMP-GOAL']}</td>
                             <td>${row['TOTAL']}</td>    
                         `;
                         tableBody.appendChild(tr);
@@ -203,6 +216,8 @@
                             <td>${row['C.B.F']}</td>
                             <td>${row['LOOSE-OFFERING']}</td>
                             <td>${row['THANKSGIVING']}</td>
+                            <td>${row['TRANSPORTATION']}</td>
+                            <td>${row['DORYUMU-SCH-PROJECT']}</td>
                             <td>${row['TOTAL']}</td>    
                         `;
                         tableBody.appendChild(tr);
